FEAT: Update dockerfile build features