@@ -1,35 +1,33 @@
 #=========================================================================
-## BUILD STAGE 1 - JRE 추출
-# Step 1: Amazon Corretto JDK 기반으로 빌더 이미지 생성
-FROM amazoncorretto:17-alpine3.18 as builder-jre
+## BUILD STAGE 1 - APP 빌드
+FROM gradle:jdk17 as builder-jre
 
-# Step 2: binutils 패키지 설치 (오브젝트 파일을 복사하거나 변환시 필요)
-RUN apk add --no-cache binutils
+WORKDIR /app
 
-# Step 3: jlink를 사용하여 최소한의 JRE 생성
-RUN $JAVA_HOME/bin/jlink \
-         --module-path "$JAVA_HOME/jmods" \
-         --verbose \
-         --add-modules ALL-MODULE-PATH \
-         --strip-debug \
-         --no-man-pages \
-         --no-header-files \
-         --compress=2 \
-         --output /jre
+COPY appspec.yml ./
+COPY gradle ./
+COPY scripts ./
+COPY build.gradle ./
+COPY settings.gradle ./
+COPY src ./
+COPY gradlew ./
+
+RUN chmod +x ./gradlew
+
+RUN gradle clean build -x test
+
+CMD ["ls", "-al", "/app/build/libs"]
 
 
 #=========================================================================
 ## BUILD STAGE 2 - APP 실행
 
-FROM alpine:3.18.4
+FROM amazoncorretto:17-alpine3.18
 
-ENV JAVA_HOME=/jre
-ENV PATH="$JAVA_HOME/bin:$PATH"
 ENV PROFILE="dev-docker"
 
-COPY --from=builder-jre /jre $JAVA_HOME
-
 WORKDIR /app
-COPY build/libs/*-SNAPSHOT.jar app.jar
 
-ENTRYPOINT java -jar app.jar --spring.profiles.active=$PROFILE
+COPY --from=builder-jre /app/build/libs/*-SNAPSHOT.jar app.jar
+
+ENTRYPOINT ["java", "-jar", "app.jar", "--spring.profiles.active=$PROFILE"]
